other fixes by sonar